--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.GioHangActivity"></activity>
+        <activity android:name=".activity.ThongTinKhachHangActivity"></activity>
+        <activity android:name=".activity.GioHangActivity" />
         <activity android:name=".activity.DetailActivity" />
         <activity android:name=".activity.AboutActivity" />
         <activity android:name=".activity.ContactActivity" />
